# abqpy

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-zh-cn.md  README.md  config.yaml  convert.bat  crowdin.yml  generate_docstring.py  genindex.html  getting_started.html  index.html  index.xml  meta.yaml  netlify.toml  objects.inv  py-modindex.html  pyproject.toml  references.html  requirements-jupyter.txt  requirements.txt  scripting.html  search.html  searchindex.js  setup.py  sitemap.xml  summary.html  test.sh  tox.ini  (+2 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  build_env.yaml  codecov.yml  create-release-news.py  delete-deleted-files.py  dependabot.yml  keylabeler.yml  labeler.yml  mergify.yml  meta.yaml  pull_request_template.md  release-drafter-2016.yml  release-drafter-2017.yml  release-drafter-2018.yml  release-drafter-2019.yml  release-drafter-2020.yml  release-drafter-2021.yml  release-drafter-2022.yml  release-drafter-2023.yml  release-drafter-main.yml  release-drafter-v2016.yml  release-drafter-v2017.yml  release-drafter-v2018.yml  release-drafter-v2019.yml  release-drafter-v2020.yml  release-drafter-v2021.yml  release-drafter-v2022.yml  release-drafter.yml  update-suggested-version.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md  website.md
.github/scripts/: conflicts.py  rtd.py  rtd.sh
.github/workflows/: black.yml  branch.yml  changes.yml  codeql.yml  conda.yml  conflicts.yml  coverage.yml  crowdin.yml  delete-deleted-files.yml  docs-previeww.yml  docs-test-backport.yml  docs-test-translations.yml  docs-test.yml  docs-upload-dev.yml  docs-upload.yml  docs.yml  hugo.yml  package.yml  pages-zh-cn.yaml  pages.yaml  pages.yml  pre-commit.yml  publish-release.yml  publish.yml  pypi.yml  pytest-backport.yml  pytest.yaml  pytest.yml  python-package-conda.yml  python-publish-conda.yml  python-publish-pypi.yml  python-publish.yml  release-drafter.yml  release-news.yml  release-wrapper.yml  release.yml  rtd-preview.yml  rtd.yml  tests.yaml  tests.yml  (+6 more)
_sources/: getting_started.rst.txt  index.rst.txt  references.rst.txt  scripting.rst.txt  tutorials.rst.txt  user.rst.txt
_sources/reference/: mdb.rst.txt  odb.rst.txt  session.rst.txt
_sources/summary/: mdb.rst.txt  odb.rst.txt
_sources/user/: about.rst.txt  examples.rst.txt  output.rst.txt
_static/: documentation_options.js
about/: index.html  index.xml
abqpy/: __init__.py  abaqus.py  decorators.py
assets/css/: shell.css
conda/: meta.yaml
content/: getstart.md
content/news/: new-theme.md  release-20xx.3.5.md  release-20xx.3.6.md
css/css/: shell.css.min.5ee5a6b8d8faedbb5157b1bfb4d9be5b2482bbe4e40af84575a92ae6ab028842.css  shell.css.min.9b8f5ad4d56551f68d307ecb19957d6ee0daefa6f7aaadee77db91993cf1c4af.css
css/theme-css/: code-highlight.css.min.60358f6aca833402d029f1625f9d78ac9331cb988429c4541f68207cfe3894ed.css  content.css.min.9cd6eb8cf77772925445b567376a88573a3e3760d10b6548bbb0d9d8fadee9f2.css  keyfeatures.css.min.f1cec535025edc9c051477db79f3425c8f1a819ca95ddfe7c1aa7d00e67657bb.css  news.css.min.4bffc1f3e8e1dfedfa26d21423b0f206b10be408002e80d7628649afd6bb6a9d.css  notices.css.min.a1ba05c782ca3a59361d6e284f0c2e1ff14e5a17a87057974212c60aa30fed2c.css  panel.css.min.d42639c23c159bedb13ee97ac0c12439a6ff5bf2e557fc976b54856abe4a616b.css  posts.css.min.6d27826ef3e7467b2bc97db6a0068283b47dddb32f6bf29504911aea6c237dd7.css  shortcuts.css.min.66eb490f98d06a7f1980356f649d586f140b68294e9aa3600404f393ce50dacb.css  styles.css.min.71a2b1393348af239dc420b756336eae7d859a511f7647bc80618a16a20c6ec1.css  tables.css.min.fb97ebea26ca35733dddd7051622133c047b532bf1aa066155c69a118d445803.css  teams.css.min.fcfb8db7476eab78560aefc0efcec4366740523e08279ec26c568590c69002fc.css  vars.css.min.c6b7e18ba6d6d7386c70db767cc62e0fb4d85efe064c8a18ae748c06d2c6556e.css  videos.css.min.b305d98ddc47a74381f484299ab14f9483f69d62928c4ed32697a5701355f138.css
docs/: Makefile  README.md  build-sphinx.py  requirements.txt  update-locale.sh
docs/source/: CHANGES.md  api.md  api.rst  cli.md  cli.rst  conf.py  envvars.md  envvars.rst  getting_started.md  getting_started.rst  index.md  index.rst  localization.md  policy.md  references.md  references.rst  summary.rst  templates.md  templates.rst  tutorials.md  tutorials.rst  update.sh  user.md  user.rst
en/: index.html  latest.html  stable.html
en/2016/: .buildinfo  CHANGES.html  cli.html  envvars.html  genindex.html  getting_started.html  index.html  localization.html  objects.inv  policy.html  py-modindex.html  search.html  searchindex.js  sitemap.xml  (+2 more)
examples/: README.rst  cantilever.py  compression-jupyter.ipynb  compression-output-jupyter.ipynb  compression-output.py  compression.py  skewExample.py  skewExampleUtils.py  viewerOpenOdbAndContour.py  viewerPrintContours.py
getstart/: index.html
js/: bundle.min.js
locale/: update.sh
news/: index.html  index.xml
reference/: kernel.html  mdb.html  odb.html  session.html
requirements/: deps.txt  dev.txt  docs.txt  jupyter.txt
scripts/: conflicts.py  crowdin.py  rtd-version-update.sh  rtd.py  rtd.sh
src/: ababltin.py  abaqusConstants.py  abaqusGui.py  caeModules.py  caePrefsAccess.py  connectorBehavior.py  customKernel.py  displayGroupMdbToolset.py  displayGroupOdbToolset.py  driverUtils.py  inpParser.py  job.py  kernelAccess.py  load.py  material.py  mesh.py  odbAccess.py  odbConnectorBehavior.py  optimization.py  part.py  redentABQ.py  regionToolset.py  section.py  sketch.py  step.py  symbolicConstants.py  textRepr.py  utils.py  visualization.py  xyPlot.py
summary/: header.html  mdb.html  odb.html  session.html
teams/: theme-team.html
templates/: compression.toml
tests/: conftest.py  test_compression.py  test_config.py  test_mdb.py  test_odb.py
user/: about.html  environment.html  examples.html  output.html  python.html
wrapper/: README.md  pyproject.toml  setup.py
zh_CN/: index.html
(+8796 files in other folders)
