# pyproject.toml, for more information about configuration options, see 
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "abqpy"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Type hints for Abaqus/Python scripting"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "auto-all",
    "fire",
    "typing-extensions",
]

[project.optional-dependencies]
jupyter = [
    "ipynbname",
    "nbconvert",
]
dev = [
    "black",
    "coverage",
    "crowdin-api-client",
    "docformatter",
    "flake8",
    "numpy",
    "pofmt",
    "pre-commit",
    "polib",
    "pytest",
    "pytest-cov",
]
docs = [
    "autoclasstoc",
    "myst-parser",
    "pandas",
    "pillow",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-toolbox",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-comments",
    "sphinx-design",
    "sphinx-gallery",
    "sphinx-hoverxref",
    "sphinx-intl",
    "sphinx-codeautolink",
    "sphinx-rtd-theme",
    "sphinx-togglebutton",
    "sphinxcontrib-programoutput",
]

[project.urls]
"Homepage" = "https://abqpy.com"
"GitHub" = "https://github.com/haiiliin/abqpy"
"Bug Tracker" = "https://github.com/haiiliin/abqpy/issues"
"Read the Docs" = "https://readthedocs.org/projects/abqpy"
"Documentation" = "https://docs.abqpy.com/en/stable/"

[project.scripts]
abqpy = "abqpy.__main__:main"

[tool.setuptools]
py-modules = [
    "ababltin", "abaqusConstants", "animation", "annotationToolset", 
    "assembly", "caeModules", "caePrefsAccess", "calibration", 
    "connectorBehavior", "customKernel", "deleteObjectCallback",
    "displayGroupMdbToolset", "displayGroupOdbToolset", "driverUtils", 
    "field", "fields", "inpParser","interaction", "material", "mesh", 
    "meshEdit", "methodCallback", "monitorManager", "odbAccess",
    "odbConnectorBehavior", "odbMaterial", "odbSection", "part", 
    "redentABQ", "section","symbolicConstants", "textRepr", 
    "upgradeScript", "visualization", "regionToolset", "step", 
    "load", "optimization", "job", "sketch", "xyPlot",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "."
relative_to = "__file__"
version_scheme = "post-release"
write_to = "src/abqpy/_version.py"
fallback_version = "2017.0.0-dev"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '(src/abaqus/.*\.py|src/abqpy/.*\.py|tests/.*\.py|setup\.py)'

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 112
wrap-descriptions = 108
blank = false
in-place = true
black = true
