# pyproject.toml, for more information about configuration options, see 
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "abqpy"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Type hints for Abaqus/Python scripting"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "auto-all",
    "fire",
    "typing-extensions",
]

[project.optional-dependencies]
jupyter = [
    "ipynbname",
    "nbconvert",
]
dev = [
    "black",
    "coverage",
    "crowdin-api-client",
    "docformatter",
    "flake8",
    "numpy",
    "pofmt",
    "polib",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
docs = [
    "autoclasstoc",
    "furo",
    "gitpython",
    "myst-parser",
    "pandas",
    "pillow",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme>=1.0.1",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-comments",
    "sphinx-design",
    "sphinx-gallery",
    "sphinx-hoverxref",
    "sphinx-intl",
    "sphinx-rtd-theme",
    "sphinx-togglebutton",
    "sphinx-toolbox",
    "sphinxcontrib-programoutput",
]

[project.urls]
"Homepage" = "https://abqpy.com"
"GitHub" = "https://github.com/haiiliin/abqpy"
"Bug Tracker" = "https://github.com/haiiliin/abqpy/issues"
"Read the Docs" = "https://readthedocs.org/projects/abqpy"
"Documentation" = "https://docs.abqpy.com/en/stable/"

[project.scripts]
abqpy = "abqpy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = "src/abqpy/_version.py"
fallback_version = "2023.0.0-dev"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = """-rf -s --cov=src --cov-report=xml --cov-report=html --cov-report=term-missing --junitxml=test-report.xml"""

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '(src/abaqus/.*\.py|src/abqpy/.*\.py|tests/.*\.py|setup\.py)'

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 112
wrap-descriptions = 108
blank = false
in-place = true
black = true
