# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "abqpy2020"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Type hints for Abaqus/Python scripting"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
jupyter = [
    "ipynbname",
    "nbconvert",
]

[project.urls]
"Homepage" = "https://abqpy.com"
"GitHub" = "https://github.com/haiiliin/abqpy"
"Bug Tracker" = "https://github.com/haiiliin/abqpy/issues"
"Read the Docs" = "https://readthedocs.org/projects/abqpy"
"Documentation" = "https://docs.abqpy.com/en/stable/"

[tool.setuptools_scm]
root = ".."
version_scheme = "post-release"
fallback_version = "2020.0.0-dev"
